2009.Feb.06 (svn.debian.org/tux4kids - revision 871)
	Moved linewrapping source files into main src directory and
	adjusted autotools files accordingly. Note - plan to combine most of
	the libgettextpo-derived files into one larger file to reduce clutter.

	David Bruce <davidstuartbruce@gmail.com>
	
2009.Feb.04 (svn.debian.org/tux4kids - revision 869)
	Added algorithmic linewrapping to the code.  This should make life
	easier for the translators.
	This works with the CMake build. Needs to have the autotools build
	incorporated.

	Tim Holy <holy@wustl.edu>
	
2009.Feb.01 (svn.debian.org/tux4kids - revision 860)
	Build - small changes to get the CMake build working with intl.
	This allows the OS X build to work.

	Tim Holy <holy@wustl.edu>
	
2009.Jan.23 (svn.debian.org/tux4kids - revision 851)
Version 1.7.1
        Build - tuxmath.desktop and tuxmath.spec files incorporated into tarball.

        Graphics - cloud.png cleaned up a bit.


        David Bruce <davidstuartbruce@gmail.com>

2009.Jan.17 (svn.debian.org/tux4kids - revision 847)
        Code - background scaling and optimization in factoroids.c cleaned up,
          basically now uses LoadBothBkgds() from loaders.c which has the 
          optimizations incorporated into it.
        Graphics - new menu icon for "Factors" version of Factoroids.


        David Bruce <davidstuartbruce@gmail.com>

2008.Dec.16 (svn.debian.org/tux4kids - revision 812)
        Code - some work on mathcards.c to check for indeterminate questions
          and to use the "comprehensive" method whenever multiple-operand
          questions are not needed, such as the "Math Command Training
          Academy" lessons. Fixed bug in add_all_valid() that was due to
          the end_of_list arg actually needing to be doubly indirect.

        Lessons - updated all "Math Command Training Academy" lesson files
          to make sure all the needed parameters get reset properly between
          lessons.