@@ -1,3 +1,10 @@
+2009.Feb.06 (svn.debian.org/tux4kids - revision 872)
+        Add the facility to use translatable versions of "SCORE" and
+	"WAVE".  To enable, define REPLACE_WAVESCORE upon compliation
+	(disabled by default, because they don't look as nice).
+
+	Tim Holy <holy@wustl.edu>
+	
 2009.Feb.06 (svn.debian.org/tux4kids - revision 871)
 	Moved linewrapping source files into main src directory and
 	adjusted autotools files accordingly. Note - plan to combine most of
